--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "axios": "^1.2.4",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -38,6 +37,7 @@
     "nodemailer": "^6.9.0",
     "nodemailer-sendinblue-transport": "^2.0.1",
     "pug": "^3.0.2",
+    "regenerator-runtime": "^0.13.11",
     "sharp": "^0.31.3",
     "slugify": "^1.6.5",
     "stripe": "^11.8.0",
